--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "homepage": "https://github.com/agarwalmehul/node-api-es7-starter.git",
   "dependencies": {
-    "@m92/express-utils": "0.0.92",
-    "body-parser": "^1.19.0",
+    "@m92/express-utils": "^0.0.95",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "helmet": "^3.21.2"
+    "express": "^4.18.2",
+    "helmet": "^6.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
